--- a/style.css
+++ b/style.css
@@ -1,5 +1,25 @@
+html {
+  height: 100%;
+}
+
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 10px;
+  background: linear-gradient(
+    to bottom right,
+    rgb(255, 241, 40) 0%,
+    rgb(77, 255, 42) 100%
+  );
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 1.95rem;
+}
+
+h1 {
+  text-align: center;
+}
+
+.flex {
+  display: flex;
+}
+
+.flex--justify-content {
+  justify-content: center;
 }
